try add filtering by propertyvalues & fix some of bugs/codde smells by sonarqube