@@ -44,7 +44,7 @@ public class CategoriesController {
         if (bindingResult.hasErrors()) {
             List<String> errors = bindingResult.getAllErrors().stream()
                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                    .collect(Collectors.toList());
+                    .toList();
             return new ResponseEntity<>(errors, HttpStatus.OK);
         }
 
@@ -62,7 +62,7 @@ public class CategoriesController {
         if (bindingResult.hasErrors()) {
             List<String> errors = bindingResult.getAllErrors().stream()
                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                    .collect(Collectors.toList());
+                    .toList();
             return new ResponseEntity<>(errors, HttpStatus.OK);
         }
 
