@@ -50,7 +50,7 @@ public class ProductsController {
         if (bindingResult.hasErrors()) {
             List<String> errors = bindingResult.getAllErrors().stream()
                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                    .collect(Collectors.toList());
+                    .toList();
             return new ResponseEntity<>(errors, HttpStatus.OK);
         }
 
